--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        def nav_version = "2.5.1"
+        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
