--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoCoins">
         <activity
+            android:name=".FeedFragment"
+            android:exported="false" />
+        <activity
             android:name=".view.SplashActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
